--- a/src/common/components/Wrapper/Wrapper.scss
+++ b/src/common/components/Wrapper/Wrapper.scss
@@ -1,3 +1,7 @@
+.content{
+  min-height: 100vh !important;
+}
+
 .ant-layout-sider.ant-layout-sider-dark.sidebar{
   padding: 31px 10px 13px;
   display: flex;
