fix bug in search

--- a/src/common/components/Wrapper/components/Header/Header.scss
+++ b/src/common/components/Wrapper/components/Header/Header.scss
@@ -5,6 +5,9 @@
   align-items: center;
   background: #121212;
   padding: 0;
+  position: sticky;
+  top:0;
+  z-index: 999;
 }
 
 .ant-btn.ant-btn-link.header__button-signIn {
